feat: harden integration clients and implement public vaccination openapi parsing

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,5 @@ integration.email.sender=no-reply@mybabycare.com
 
 integration.vaccination.base-url=https://api.publicdata.go.kr
 integration.vaccination.service-key=
+integration.vaccination.endpoint=/openapi/service/rest/ChildVaccsService/getChildVaccsList
+integration.vaccination.default-rows=50
